<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/first_frament"
            android:icon="@drawable/ic_action_name"
            android:title="@string/input" />
        <item
            android:id="@+id/second_fragement"
            android:icon="@drawable/data"
            android:title="@string/instruction" />
        <item
            android:id="@+id/third_fragement"
            android:icon="@drawable/about"
            android:title="@string/aboutapp" />

    </group>

    <item android:title="@string/commpunication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
